--- a/services/analytics-service/Dockerfile
+++ b/services/analytics-service/Dockerfile
@@ -1,14 +1,26 @@
-FROM node:18-alpine AS builder
+# ===== ANALYTICS SERVICE - OPTIMIZED =====
+# services/analytics-service/Dockerfile
+
+FROM node:18-alpine AS dependencies
 WORKDIR /app
 COPY package*.json ./
-RUN npm ci --only=production
+RUN npm install --omit=dev && \
+  npm cache clean --force
 
-FROM node:18-alpine
+FROM node:18-alpine AS production
+LABEL maintainer="devops@example.com"
+LABEL version="1.0.0"
+LABEL description="Analytics Service - Microservices Platform"
+
+RUN apk add --no-cache dumb-init
 WORKDIR /app
-COPY --from=builder /app/node_modules ./node_modules
-COPY . .
-EXPOSE 8001
-HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-  CMD wget --quiet --tries=1 --spider http://localhost:8001/health || exit 1
+COPY --from=dependencies /app/node_modules ./node_modules
+COPY --chown=node:node . .
 USER node
+EXPOSE 8006
+
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+  CMD node -e "require('http').get('http://localhost:8006/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"
+
+ENTRYPOINT ["dumb-init", "--"]
 CMD ["node", "src/server.js"]
