--- a/services/payment-service/.dockerignore
+++ b/services/payment-service/.dockerignore
@@ -1,8 +1,44 @@
+# Dependencies
 node_modules
 npm-debug.log
+package-lock.json
+
+# Environment
 .env
+.env.*
+
+# Version Control
 .git
 .gitignore
-README.md
+
+# IDE
+.vscode
+.idea
+*.swp
 .DS_Store
+
+# Documentation
+README.md
 *.md
+docs
+
+# Testing
+test
+tests
+__tests__
+*.test.js
+*.spec.js
+coverage
+
+# Build artifacts
+dist
+build
+tmp
+
+# Logs
+*.log
+logs
+
+# Docker
+Dockerfile.original
+docker-compose*.yml
